--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,14 +1,24 @@
 {
-  "redirects": [
-    {
-      "source": "/",
-      "destination": "https://emotion-aware-backend-xb6b.onrender.com/classroom",
-      "permanent": false
-    },
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ],
+  "headers": [
     {
       "source": "/(.*)",
-      "destination": "https://emotion-aware-backend-xb6b.onrender.com/$1",
-      "permanent": false
+      "headers": [
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-XSS-Protection",
+          "value": "1; mode=block"
+        }
+      ]
     }
   ]
 }
